Bnfc/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Bnfc/Par.y
-----------------------------------------------------------------------------

state 99 contains 1 shift/reduce conflicts.

rule 29 is unused
rule 30 is unused
rule 31 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Stmt -> Type Ident '(' ListArg ')' Block           (5)
	Stmt -> ';'                                        (6)
	Stmt -> Block                                      (7)
	Stmt -> Type Ident '=' Expr ';'                    (8)
	Stmt -> Ident '=' Expr ';'                         (9)
	Stmt -> Ident '++' ';'                             (10)
	Stmt -> Ident '--' ';'                             (11)
	Stmt -> 'return' Expr ';'                          (12)
	Stmt -> 'if' '(' Expr ')' Stmt                     (13)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (14)
	Stmt -> 'while' '(' Expr ')' Stmt                  (15)
	Stmt -> Expr ';'                                   (16)
	Stmt -> 'print' Expr ';'                           (17)
	Arg -> Type Ident                                  (18)
	Arg -> Type '&' Ident                              (19)
	ListArg ->                                         (20)
	ListArg -> Arg                                     (21)
	ListArg -> Arg ',' ListArg                         (22)
	Block -> '{' ListStmt '}'                          (23)
	ListStmt ->                                        (24)
	ListStmt -> Stmt ListStmt                          (25)
	Type -> 'int'                                      (26)
	Type -> 'string'                                   (27)
	Type -> 'bool'                                     (28)
	ListType ->                                        (29)
	ListType -> Type                                   (30)
	ListType -> Type ',' ListType                      (31)
	Expr6 -> Ident                                     (32)
	Expr6 -> Integer                                   (33)
	Expr6 -> 'true'                                    (34)
	Expr6 -> 'false'                                   (35)
	Expr6 -> Ident '(' ListExpr ')'                    (36)
	Expr6 -> String                                    (37)
	Expr6 -> '(' Expr ')'                              (38)
	Expr5 -> '-' Expr6                                 (39)
	Expr5 -> '!' Expr6                                 (40)
	Expr5 -> Expr6                                     (41)
	Expr4 -> Expr4 MulOp Expr5                         (42)
	Expr4 -> Expr5                                     (43)
	Expr3 -> Expr3 AddOp Expr4                         (44)
	Expr3 -> Expr4                                     (45)
	Expr2 -> Expr2 RelOp Expr3                         (46)
	Expr2 -> Expr3                                     (47)
	Expr1 -> Expr2 '&&' Expr1                          (48)
	Expr1 -> Expr2                                     (49)
	Expr -> Expr1 '||' Expr                            (50)
	Expr -> Expr1                                      (51)
	ListExpr ->                                        (52)
	ListExpr -> Expr                                   (53)
	ListExpr -> Expr ',' ListExpr                      (54)
	AddOp -> '+'                                       (55)
	AddOp -> '-'                                       (56)
	MulOp -> '*'                                       (57)
	MulOp -> '/'                                       (58)
	MulOp -> '%'                                       (59)
	RelOp -> '<'                                       (60)
	RelOp -> '<='                                      (61)
	RelOp -> '>'                                       (62)
	RelOp -> '>='                                      (63)
	RelOp -> '=='                                      (64)
	RelOp -> '!='                                      (65)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'print'        { PT _ (TS _ 27) }
	'return'       { PT _ (TS _ 28) }
	'string'       { PT _ (TS _ 29) }
	'true'         { PT _ (TS _ 30) }
	'while'        { PT _ (TS _ 31) }
	'{'            { PT _ (TS _ 32) }
	'||'           { PT _ (TS _ 33) }
	'}'            { PT _ (TS _ 34) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Stmt            rules 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17
	Arg             rules 18, 19
	ListArg         rules 20, 21, 22
	Block           rule  23
	ListStmt        rules 24, 25
	Type            rules 26, 27, 28
	ListType        rules 29, 30, 31
	Expr6           rules 32, 33, 34, 35, 36, 37, 38
	Expr5           rules 39, 40, 41
	Expr4           rules 42, 43
	Expr3           rules 44, 45
	Expr2           rules 46, 47
	Expr1           rules 48, 49
	Expr            rules 50, 51
	ListExpr        rules 52, 53, 54
	AddOp           rules 55, 56
	MulOp           rules 57, 58, 59
	RelOp           rules 60, 61, 62, 63, 64, 65

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	';'            shift, and enter state 21
	'bool'         shift, and enter state 22
	'false'        shift, and enter state 23
	'if'           shift, and enter state 24
	'int'          shift, and enter state 25
	'print'        shift, and enter state 26
	'return'       shift, and enter state 27
	'string'       shift, and enter state 28
	'true'         shift, and enter state 29
	'while'        shift, and enter state 30
	'{'            shift, and enter state 31
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33
	%eof           reduce using rule 24

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	Stmt           goto state 7
	Block          goto state 8
	ListStmt       goto state 9
	Type           goto state 10
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 17

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr ';'                        (rule 9)
	Stmt -> Ident . '++' ';'                            (rule 10)
	Stmt -> Ident . '--' ';'                            (rule 11)
	Expr6 -> Ident .                                    (rule 32)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 36)

	'!='           reduce using rule 32
	'%'            reduce using rule 32
	'&&'           reduce using rule 32
	'('            shift, and enter state 62
	'*'            reduce using rule 32
	'+'            reduce using rule 32
	'++'           shift, and enter state 63
	'-'            reduce using rule 32
	'--'           shift, and enter state 64
	'/'            reduce using rule 32
	';'            reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'='            shift, and enter state 65
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	'||'           reduce using rule 32


State 4

	Expr6 -> Integer .                                  (rule 33)

	'!='           reduce using rule 33
	'%'            reduce using rule 33
	'&&'           reduce using rule 33
	')'            reduce using rule 33
	'*'            reduce using rule 33
	'+'            reduce using rule 33
	','            reduce using rule 33
	'-'            reduce using rule 33
	'/'            reduce using rule 33
	';'            reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'=='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'||'           reduce using rule 33


State 5

	Expr6 -> String .                                   (rule 37)

	'!='           reduce using rule 37
	'%'            reduce using rule 37
	'&&'           reduce using rule 37
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'||'           reduce using rule 37


State 6

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 7

	ListStmt -> Stmt . ListStmt                         (rule 25)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	';'            shift, and enter state 21
	'bool'         shift, and enter state 22
	'false'        shift, and enter state 23
	'if'           shift, and enter state 24
	'int'          shift, and enter state 25
	'print'        shift, and enter state 26
	'return'       shift, and enter state 27
	'string'       shift, and enter state 28
	'true'         shift, and enter state 29
	'while'        shift, and enter state 30
	'{'            shift, and enter state 31
	'}'            reduce using rule 24
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33
	%eof           reduce using rule 24

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Stmt           goto state 7
	Block          goto state 8
	ListStmt       goto state 61
	Type           goto state 10
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 17

State 8

	Stmt -> Block .                                     (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'-'            reduce using rule 7
	';'            reduce using rule 7
	'bool'         reduce using rule 7
	'else'         reduce using rule 7
	'false'        reduce using rule 7
	'if'           reduce using rule 7
	'int'          reduce using rule 7
	'print'        reduce using rule 7
	'return'       reduce using rule 7
	'string'       reduce using rule 7
	'true'         reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	L_Ident        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 9

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 10

	Stmt -> Type . Ident '(' ListArg ')' Block          (rule 5)
	Stmt -> Type . Ident '=' Expr ';'                   (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 60

State 11

	Expr5 -> Expr6 .                                    (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'||'           reduce using rule 41


State 12

	Expr4 -> Expr5 .                                    (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 13

	Expr4 -> Expr4 . MulOp Expr5                        (rule 42)
	Expr3 -> Expr4 .                                    (rule 45)

	'!='           reduce using rule 45
	'%'            shift, and enter state 57
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            shift, and enter state 58
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            shift, and enter state 59
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'||'           reduce using rule 45

	MulOp          goto state 56

State 14

	Expr3 -> Expr3 . AddOp Expr4                        (rule 44)
	Expr2 -> Expr3 .                                    (rule 47)

	'!='           reduce using rule 47
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'+'            shift, and enter state 54
	','            reduce using rule 47
	'-'            shift, and enter state 55
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47

	AddOp          goto state 53

State 15

	Expr2 -> Expr2 . RelOp Expr3                        (rule 46)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 48)
	Expr1 -> Expr2 .                                    (rule 49)

	'!='           shift, and enter state 46
	'&&'           shift, and enter state 47
	')'            reduce using rule 49
	','            reduce using rule 49
	';'            reduce using rule 49
	'<'            shift, and enter state 48
	'<='           shift, and enter state 49
	'=='           shift, and enter state 50
	'>'            shift, and enter state 51
	'>='           shift, and enter state 52
	'||'           reduce using rule 49

	RelOp          goto state 45

State 16

	Expr -> Expr1 . '||' Expr                           (rule 50)
	Expr -> Expr1 .                                     (rule 51)

	')'            reduce using rule 51
	','            reduce using rule 51
	';'            reduce using rule 51
	'||'           shift, and enter state 44


State 17

	Stmt -> Expr . ';'                                  (rule 16)

	';'            shift, and enter state 43


State 18

	Expr5 -> '!' . Expr6                                (rule 40)

	'('            shift, and enter state 19
	'false'        shift, and enter state 23
	'true'         shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 36
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 42

State 19

	Expr6 -> '(' . Expr ')'                             (rule 38)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	'false'        shift, and enter state 23
	'true'         shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 36
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 41

State 20

	Expr5 -> '-' . Expr6                                (rule 39)

	'('            shift, and enter state 19
	'false'        shift, and enter state 23
	'true'         shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 36
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 40

State 21

	Stmt -> ';' .                                       (rule 6)

	'!'            reduce using rule 6
	'('            reduce using rule 6
	'-'            reduce using rule 6
	';'            reduce using rule 6
	'bool'         reduce using rule 6
	'else'         reduce using rule 6
	'false'        reduce using rule 6
	'if'           reduce using rule 6
	'int'          reduce using rule 6
	'print'        reduce using rule 6
	'return'       reduce using rule 6
	'string'       reduce using rule 6
	'true'         reduce using rule 6
	'while'        reduce using rule 6
	'{'            reduce using rule 6
	'}'            reduce using rule 6
	L_Ident        reduce using rule 6
	L_integ        reduce using rule 6
	L_quoted       reduce using rule 6
	%eof           reduce using rule 6


State 22

	Type -> 'bool' .                                    (rule 28)

	'&'            reduce using rule 28
	L_Ident        reduce using rule 28


State 23

	Expr6 -> 'false' .                                  (rule 35)

	'!='           reduce using rule 35
	'%'            reduce using rule 35
	'&&'           reduce using rule 35
	')'            reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'||'           reduce using rule 35


State 24

	Stmt -> 'if' . '(' Expr ')' Stmt                    (rule 13)
	Stmt -> 'if' . '(' Expr ')' Stmt 'else' Stmt        (rule 14)

	'('            shift, and enter state 39


State 25

	Type -> 'int' .                                     (rule 26)

	'&'            reduce using rule 26
	L_Ident        reduce using rule 26


State 26

	Stmt -> 'print' . Expr ';'                          (rule 17)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	'false'        shift, and enter state 23
	'true'         shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 36
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 11
	Expr5          goto state 12
	Expr4          goto state 13
	Expr3          goto state 14
	Expr2          goto state 15
	Expr1          goto state 16
	Expr           goto state 38

State 27

	Stmt -> 'return' . Expr ';'                         (rule 12)
